<resources>
    <string name="app_name">TodoList</string>
    <string name="todo_title">Todo Title</string>
    <string name="todo_description">Todo Description</string>
    <string name="sec_time_left">sec time left</string>
    <string name="_0">0</string>
    <string name="ok">OK</string>
    <string name="_00">00</string>
    <string name="start">Start</string>
    <string name="_15s">+15s</string>
    <string name="welcome">"Set Your Habits Here and Make Your Future Better. "</string>
    <string name="account">Create an account</string>
    <string name="get_start">GET START</string>
    <string name="title">Title Here</string>
    <string name="message">Description Here</string>
    <string name="schedule_notification">Schedule Notification</string>
    <string name="seconds_left">Seconds Left</string>
    <string name="_60">60</string>
    <string name="no_date">No Date</string>
    <string name="no_time">No Time</string>
    <string name="select_date">Select Date</string>
    <string name="no_date_selected">No Date Selected</string>
    <string name="select_time">Select Time</string>
    <string name="no_time_selected">No Time Selected</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="Add_To_Do">ADD NEW HABIT</string>
    <string name="stop_watch">STOP WATCH</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="enter_your_reminder_message">Enter your reminder message</string>
    <string name="all_your_task">All Your Habits</string>
    <string name="set_your_alarm_here">Alarm</string>
    <string name="manage_your_task">Manage Your Task</string>
    <string name="name">Name</string>
    <string name="enter_your_event">Enter Your Event</string>
    <string name="app_icon">App Icon</string>
</resources>