<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="20dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="68dp"
            android:layout_height="90dp"
            android:layout_marginStart="4dp" />

        <TextView
            android:id="@+id/tv_todo_title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title"
            android:layout_marginStart="70dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_todo_description"
            android:layout_width="200dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="27dp"
            android:layout_height="wrap_content"
            android:text="@string/todo_description"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_todo_date"
            android:layout_width="200dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="44dp"
            android:layout_height="wrap_content"
            android:text="@string/no_date"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_todo_time"
            android:layout_width="200dp"
            android:layout_marginTop="62dp"
            android:layout_marginStart="70dp"
            android:layout_height="wrap_content"
            android:text="@string/no_time"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
